# plate_recognition

./: .gitignore  CMakeLists.txt  FindOpenCV.cmake  Measurements.md  README.md  increase_warn_level.cmake  opencv.pri  plate_recognition.pro
auto_test_desktop/: CMakeLists.txt  auto_test_desktop.pro  main.cpp
other/: neural_net.qrc  neural_net.xml  neural_net.yml  neural_net_char.yml  neural_net_num.yml
plate_recog/: CMakeLists.txt
plate_recog/src/: engine.cpp  engine.h  syms.h
plate_recog_lib/: CMakeLists.txt  binarizewolfjolion.cpp  binarizewolfjolion.h  engine.cpp  engine.h  figure.h  neural_net_char.cpp  neural_net_num.cpp  number_data.h  plate_recog_lib.pro  plate_recog_lib_config.h  rus_region.cpp  std_cout_2_qdebug.h  sym_recog.cpp  sym_recog.h  syms.cpp  syms.h  utils.h
qt_gui_test/: CMakeLists.txt  main.cpp  qt_gui_test.pro  recog_test.cpp  recog_test.h  recog_test.ui
samples/ANPRTool/: ANPRTool.pro  cameraitem.cpp  cameraitem.h  main.cpp  main.qml  qml.qrc
samples/eclipse_sample/: .classpath  .cproject  .project  AndroidManifest.xml  project.properties
samples/eclipse_sample/jni/: Android.mk  jni_part.cpp
samples/eclipse_sample/res/values/: strings.xml
samples/eclipse_sample/src/ru/sploid/platerecog/: RecogActivity.java
train_neural_network/: main.cpp  train_neural_network.pro
