cmake_minimum_required(VERSION 2.8.8)
set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
find_package(Qt5Widgets REQUIRED)
qt5_generate_moc(recog_test.h moc_recog_test.cpp)
qt5_wrap_ui(ui_recog_test.h recog_test.ui)
add_executable(qt_gui_test main.cpp recog_test.h recog_test.cpp ui_recog_test.h)
qt5_use_modules(qt_gui_test Widgets)
include_directories(${OpenCV_INCLUDE_DIRS} ../plate_recog_lib ${CMAKE_CURRENT_BINARY_DIR})
target_link_libraries(qt_gui_test ${OpenCV_LIBS} plate_recog_lib)
include(../increase_warn_level.cmake)
